fix: utility SCSS issues
- Remove dangerous universal selector * from reduced motion media query
- Change high contrast borders from #000 to currentColor
- Fix aria-hidden contradiction (display: none instead of sr-only)
- Replace hardcoded #fff/#000 with -color-white/black tokens
- Add margin-auto utilities (mx-auto, my-auto, mt-auto, etc.)
- Remove duplicate truncation utilities from _utilities.scss

--- a/wp-content/plugins/affiliate-product-showcase/assets/scss/components/_utilities.scss
+++ b/wp-content/plugins/affiliate-product-showcase/assets/scss/components/_utilities.scss
@@ -24,24 +24,6 @@
 	&-lowercase { text-transform: lowercase; }
 	&-capitalize { text-transform: capitalize; }
 
-	&-truncate { 
-		overflow: hidden; 
-		text-overflow: ellipsis; 
-		white-space: nowrap; 
-	}
-	&-truncate-2 { 
-		display: -webkit-box; 
-		-webkit-line-clamp: 2; 
-		-webkit-box-orient: vertical; 
-		overflow: hidden; 
-	}
-	&-truncate-3 { 
-		display: -webkit-box; 
-		-webkit-line-clamp: 3; 
-		-webkit-box-orient: vertical; 
-		overflow: hidden; 
-	}
-
 	&-wrap { 
 		word-wrap: break-word; 
 		overflow-wrap: break-word; 
