--- a/wp-content/plugins/affiliate-product-showcase/assets/scss/utilities/_spacing.scss
+++ b/wp-content/plugins/affiliate-product-showcase/assets/scss/utilities/_spacing.scss
@@ -15,6 +15,7 @@
 
 .aps-m {
 	&-0 { margin: 0; }
+	&-auto { margin: auto; }
 	&-1 { margin: $aps-spacing-1; }
 	&-2 { margin: $aps-spacing-2; }
 	&-3 { margin: $aps-spacing-3; }
@@ -28,6 +29,7 @@
 
 .aps-mt {
 	&-0 { margin-top: 0; }
+	&-auto { margin-top: auto; }
 	&-1 { margin-top: $aps-spacing-1; }
 	&-2 { margin-top: $aps-spacing-2; }
 	&-3 { margin-top: $aps-spacing-3; }
@@ -41,6 +43,7 @@
 
 .aps-mb {
 	&-0 { margin-bottom: 0; }
+	&-auto { margin-bottom: auto; }
 	&-1 { margin-bottom: $aps-spacing-1; }
 	&-2 { margin-bottom: $aps-spacing-2; }
 	&-3 { margin-bottom: $aps-spacing-3; }
@@ -54,6 +57,7 @@
 
 .aps-ml {
 	&-0 { margin-left: 0; }
+	&-auto { margin-left: auto; }
 	&-1 { margin-left: $aps-spacing-1; }
 	&-2 { margin-left: $aps-spacing-2; }
 	&-3 { margin-left: $aps-spacing-3; }
@@ -67,6 +71,7 @@
 
 .aps-mr {
 	&-0 { margin-right: 0; }
+	&-auto { margin-right: auto; }
 	&-1 { margin-right: $aps-spacing-1; }
 	&-2 { margin-right: $aps-spacing-2; }
 	&-3 { margin-right: $aps-spacing-3; }
@@ -80,6 +85,7 @@
 
 .aps-mx {
 	&-0 { margin-left: 0; margin-right: 0; }
+	&-auto { margin-left: auto; margin-right: auto; }
 	&-1 { margin-left: $aps-spacing-1; margin-right: $aps-spacing-1; }
 	&-2 { margin-left: $aps-spacing-2; margin-right: $aps-spacing-2; }
 	&-3 { margin-left: $aps-spacing-3; margin-right: $aps-spacing-3; }
@@ -93,6 +99,7 @@
 
 .aps-my {
 	&-0 { margin-top: 0; margin-bottom: 0; }
+	&-auto { margin-top: auto; margin-bottom: auto; }
 	&-1 { margin-top: $aps-spacing-1; margin-bottom: $aps-spacing-1; }
 	&-2 { margin-top: $aps-spacing-2; margin-bottom: $aps-spacing-2; }
 	&-3 { margin-top: $aps-spacing-3; margin-bottom: $aps-spacing-3; }
